crates/wamex_object/src/analysis/split/snapshots/wamex_object__analysis__split__tests__simple_graph.wasm - split_program_info.snap
---
source: crates/wamex_object/src/analysis/split/mod.rs
expression: split_info_output
---
=== Split Program Structure ===

Module #0: main
  Defined symbols: 14
    0 <hello_world>
    1 <version>
    2 <constant>
    3 <indirect_fn>
    4 <no_inline_fn>
    5 <__stack_pointer>
    6 <__data_end>
    7 <__heap_base>
    8 <__indirect_function_table>
    9 <__memory_base>
    10 <.Lanon.40cffdd5158028b640e87266bd095959.0>
    11 <.Lanon.40cffdd5158028b640e87266bd095959.1>
    12 <.Lanon.40cffdd5158028b640e87266bd095959.2>
    13 <.Lswitch.table.indirect_fn>
  Exports: 3
    5 <__stack_pointer>
    8 <__indirect_function_table>
    9 <__memory_base>
